--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body{
     border-radius: 4px;
     margin-bottom: 1rem;
 }
-.links a{
+a{
     text-decoration: none;
     color: inherit;
     padding: 4px;
@@ -204,4 +204,10 @@ body{
     .technologies h2{
         font-size: 1.4rem;
     }
+}
+.scale:hover{
+    transform: scale(1.015);
+}
+.scale{
+    transition: all 0.6s  ease-in-out;
 }
