--- a/contact.css
+++ b/contact.css
@@ -29,6 +29,10 @@
 .resume-card{
     background-color: var(--element-dark-bg-color);
 }
+.resume-content h2{
+    margin-top: 0px;
+    margin-bottom: 12px;
+}
 .github-card{
     background-color: var(--element-dark-bg-color);
 }
@@ -38,6 +42,7 @@
     justify-content: center;
     align-items: center;
 }
+
 .github-content p{
     text-align: center;
 }
