contact css minor modification

--- a/style.css
+++ b/style.css
@@ -150,8 +150,8 @@ a{
     .grid{
         margin-top: 30px;
         grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: 200px 120px 130px 300px;
-        /* grid-template-rows:  0.1fr 0.5fr 0.5fr 1fr 1fr; */
+        /* grid-template-rows: 200px 120px 130px 300px; */
+        grid-template-rows:  0.2fr 0.1fr 0.3fr 0.5fr ;
        
     }
     .intro{
